@@ -1,6 +1,7 @@
 ./Tests/Mono.Rocks.Tests/AssemblyInfo.cs
 ./Tests/Mono.Rocks.Tests/Int32Test.cs
 ./Tests/Mono.Rocks.Tests/BaseRocksFixture.cs
+./Tests/Mono.Rocks.Tests/NaturalStringComparerTest.cs
 ./Tests/Mono.Rocks.Tests/StringTest.cs
 ./Tests/Mono.Rocks.Tests/TextReaderTest.cs
 ./Tests/Mono.Rocks.Tests/IEnumerableTest.cs
